feat(report): collect and query Kafka metrics with IoTDB